@@ -1,14 +1,18 @@
 package pawparazzi.back.follow.service;
 
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pawparazzi.back.follow.dto.FollowRequestDto;
 import pawparazzi.back.follow.dto.FollowResponseDto;
+import pawparazzi.back.follow.dto.FollowerResponseDto;
+import pawparazzi.back.follow.dto.FollowingResponseDto;
 import pawparazzi.back.follow.entity.Follow;
 import pawparazzi.back.follow.repository.FollowRepository;
 import pawparazzi.back.member.entity.Member;
 import pawparazzi.back.member.repository.MemberRepository;
+import pawparazzi.back.security.util.JwtUtil;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,51 +23,97 @@ public class FollowService {
 
     private final FollowRepository followRepository;
     private final MemberRepository memberRepository;
+    private final JwtUtil jwtUtil;
 
+    //특정 회원을 조회했을 때 팔로우 여부 확인
     @Transactional
-    public FollowResponseDto follow(FollowRequestDto requestDto) {
-        Member follower = memberRepository.findById(requestDto.getFollowerId())
-                .orElseThrow(() -> new IllegalArgumentException("팔로워가 존재하지 않습니다."));
-        Member following = memberRepository.findById(requestDto.getFollowingId())
+    public FollowResponseDto follow(String targetNickName, String token) {
+        Long userId = jwtUtil.extractMemberId(token.replace("Bearer ", ""));
+        Member member = memberRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+        Member following = memberRepository.findByNickName(targetNickName)
                 .orElseThrow(() -> new IllegalArgumentException("팔로우할 사용자가 존재하지 않습니다."));
 
-        if (followRepository.findByFollowerAndFollowing(follower, following).isPresent()) {
+        //추후 수정 필요 (특정 회원 프로필 정보에서 체크하여 메서드 활성화 및 비활성화)
+        boolean isAlreadyFollowed = followRepository.findByFollowerAndFollowing(member, following).isPresent();
+        if (isAlreadyFollowed) {
             throw new IllegalStateException("이미 팔로우한 사용자입니다.");
         }
 
-        Follow follow = new Follow(follower, following);
+        if(member.equals(following)) {
+            throw new IllegalStateException("자기 자신은 팔로우할 수 없습니다.");
+        }
+
+        Follow follow = new Follow(member, following);
         followRepository.save(follow);
-        return new FollowResponseDto(follow.getId(), follower.getId(), following.getId());
+
+        FollowResponseDto dto = getFollowResponseDto(member, following);
+        dto.setFollowingCount(dto.getFollowingCount() + 1);
+        dto.setFollowedStatus(true);
+        return dto;
     }
 
     @Transactional
-    public void unfollow(Long followerId, Long followingId) {
-        Member follower = memberRepository.findById(followerId)
-                .orElseThrow(() -> new IllegalArgumentException("팔로워가 존재하지 않습니다."));
-        Member following = memberRepository.findById(followingId)
-                .orElseThrow(() -> new IllegalArgumentException("팔로우할 사용자가 존재하지 않습니다."));
+    public void unfollow(String targetNickName, String token) {
+        Long userId = jwtUtil.extractMemberId(token.replace("Bearer ", ""));
+        Member member = memberRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
+        Member following = memberRepository.findByNickName(targetNickName)
+                .orElseThrow(() -> new IllegalArgumentException("언팔로우할 사용자가 존재하지 않습니다."));
 
-        Follow follow = (Follow) followRepository.findByFollowerAndFollowing(follower, following)
-                .orElseThrow(() -> new IllegalArgumentException("팔로우 관계가 존재하지 않습니다."));
+        //추후 수정 필요 (특정 회원 프로필 정보에서 체크하여 메서드 활성화 및 비활성화)
+        Follow follow = followRepository.findByFollowerAndFollowing(member, following)
+                .orElseThrow(() -> new IllegalArgumentException("해당 사용자를 팔로우하고 있지 않습니다."));
 
         followRepository.delete(follow);
     }
 
-    public List<FollowResponseDto> getFollowers(Long memberId) {
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자가 존재하지 않습니다."));
+    @Transactional(readOnly = true)
+    public List<FollowerResponseDto> getFollowers(String nickName) {
+        Member member = memberRepository.findByNickName(nickName)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
-        return followRepository.findByFollowing(member).stream()
-                .map(f -> new FollowResponseDto(f.getId(), f.getFollower().getId(), f.getFollowing().getId()))
-                .collect(Collectors.toList());
+        List<Follow> follower = followRepository.findByFollowing(member);
+
+        return follower.stream()
+                .map(follow -> {
+                    FollowerResponseDto dto = new FollowerResponseDto();
+                    dto.setFollowerNickName(follow.getFollower().getNickName());
+                    dto.setFollowerName(follow.getFollower().getName());
+                    dto.setFollowerProfileImageUrl(follow.getFollower().getProfileImageUrl());
+                    return dto;
+                }).toList();
     }
 
-    public List<FollowResponseDto> getFollowing(Long memberId) {
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new IllegalArgumentException("사용자가 존재하지 않습니다."));
+    @Transactional(readOnly = true)
+    public List<FollowingResponseDto> getFollowing(String nickName) {
+        Member member = memberRepository.findByNickName(nickName)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
-        return followRepository.findByFollower(member).stream()
-                .map(f -> new FollowResponseDto(f.getId(), f.getFollower().getId(), f.getFollowing().getId()))
-                .collect(Collectors.toList());
+        List<Follow> following = followRepository.findByFollower(member);
+
+        return following.stream()
+                .map(follow -> {
+                    FollowingResponseDto dto = new FollowingResponseDto();
+                    dto.setFollowingNickName(follow.getFollowing().getNickName());
+                    dto.setFollowingName(follow.getFollowing().getName());
+                    dto.setFollowingProfileImageUrl(follow.getFollowing().getProfileImageUrl());
+                    return dto;
+                }).toList();
     }
+
+    @NotNull
+    private static FollowResponseDto getFollowResponseDto(Member member, Member following) {
+        FollowResponseDto responseDto = new FollowResponseDto();
+        responseDto.setFollowerId(member.getId());
+        responseDto.setFollowingId(following.getId());
+        responseDto.setFollowerNickName(member.getNickName());
+        responseDto.setFollowingNickName(following.getNickName());
+        responseDto.setFollowerProfileImageUrl(member.getProfileImageUrl());
+        responseDto.setFollowingProfileImageUrl(following.getProfileImageUrl());
+        responseDto.setFollowerCount(member.getFollowerList().size());
+        responseDto.setFollowingCount(member.getFollowingList().size());
+        return responseDto;
+    }
+
 }
